Refactored minor migration issues